--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,15 @@ body {
 
 img{
 	max-width: inherit;
-	height: auto;
-	margin-left: auto;
-	margin-right: auto;
+	align-content: center;
 }
 /*INFO BOX SECTION*/
 
 /*span {
 	color: forestgreen;
 }*/
+
+h1, h3, h6 {
+	color: forestgreen;
+	text-align: center;
+}
